--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. For more details, visit
-# https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
+# https://developer.android.com/topic/libraries/support-library/androidx-rn
 # org.gradle.parallel=true
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
@@ -21,5 +21,10 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
+# Disable Gradle Daemon to prevent file locking issues (especially on OneDrive)
+org.gradle.daemon=false
+# Disable VFS watching to prevent file locking on Windows/OneDrive
+org.gradle.vfs.watch=false
+# Disable KSP incremental compilation if it causes locking
+ksp.incremental=false
