Se añadio la funcion de recordatorios multiples para las alarmas y notificaciones

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,10 +21,14 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-android.nonFinalResIds=false
-# Disable Gradle Daemon to prevent file locking issues (especially on OneDrive)
-org.gradle.daemon=false
-# Disable VFS watching to prevent file locking on Windows/OneDrive
+
+# --- Soluciones para errores de 'Unable to delete directory' ---
+
+# 1. Deshabilitar el Gradle Daemon: A veces, el proceso de fondo mantiene los archivos bloqueados.
+# org.gradle.daemon=false
+
+# 2. Deshabilitar el sistema de archivos virtual de Gradle (VFS): Esta es la causa más común en carpetas sincronizadas (OneDrive, Dropbox, etc).
 org.gradle.vfs.watch=false
-# Disable KSP incremental compilation if it causes locking
-ksp.incremental=false
+
+android.nonFinalResIds=false
+
